# Parser_ya_maps_0

./: Dockerfile  Dockerfile.yaml  celery_app.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  readme.me  run_parser.py  tasks.py
core/: adb.py  celery_worker.py  config.py  db.py  tasks.py
parser/: parser_card.py  parser_ya_page.py  views.py
parser/models/: __init__.py  base.py  category.py  city.py  db_helper.py  organisations.py
