[project]
name = "parser-ya-maps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "fastapi[all]>=0.135.2",
    "flower>=2.0.1",
    "lxml>=6.0.2",
    "pip>=26.0.1",
    "redis>=7.4.0",
    "setuptools>=82.0.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.42.0",
]
